--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.5",
+    "react-flatpickr": "^4.0.11",
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
     "react-router": "^7.1.5",
@@ -44,6 +45,7 @@
   "devDependencies": {
     "@eslint/js": "^9.19.0",
     "@tailwindcss/postcss": "^4.0.8",
+    "@types/file-saver": "^2.0.7",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
