--- a/nginx.conf
+++ b/nginx.conf
@@ -1,24 +1,21 @@
 server {
-    listen 80;
-    server_name _;
+  listen 80;
+  server_name _;
 
-    root /usr/share/nginx/html;
-    index index.html;
+  root /usr/share/nginx/html;
+  index index.html;
 
-    location / {
-        try_files $uri /index.html;
-    }
+  location / {
+    try_files $uri $uri/ /index.html;
+  }
 
-    location /api/ {
-        proxy_pass http://gateway:8080/; # 'gateway' là service name trong docker-compose
-        proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
+  location ~* \.(?:js|css|png|jpg|jpeg|gif|svg|ico|woff2?)$ {
+    expires 30d;
+    add_header Cache-Control "public, max-age=2592000, immutable";
+    try_files $uri =404;
+  }
 
-    gzip on;
-    gzip_types text/plain text/css application/json application/javascript application/xml+rss application/xml text/javascript;
-    gzip_min_length 256;
+  location = /index.html {
+    add_header Cache-Control "no-store";
+  }
 }
